# hexlet-code

./: .bash_history  .gitignore  .python_history  Makefile  README.md  brain-calc-demo.cast  brain-even-demo.cast  brain-gcd-demo.cast  brain-prime-demo.cast  brain-progression-demo.cast  even.py  pyproject.toml
.config/asciinema/: install-id
.config/uv/: uv-receipt.json
brain_games/games/: gcd.py  prime.py  progression.py
brain_games/scripts/: brain_gcd.py  brain_prime.py  brain_progression.py
